# seqcolyte

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/qc/: diagnostics.md  metric-glossary.md
extract/: __init__.py  __main__.py  builder.py  cli.py  cross_check.py  doc_extract.py  doc_gather.py  html_parser.py  pdf_text.py  verified_constants.py
protocols/: 10x_3p_v3.provenance.md  tenx_3p_v3.provenance.md
qc/: __init__.py  __main__.py  checks.py  cli.py  engine.py  eval.py  model.py  nanopore.py  planner.py  profile.py  registry.py  rust_engine.py
rust/seqcolyte-qc/: Cargo.toml
rust/seqcolyte-qc/src/: cli.rs  eval.rs  main.rs
seqcolyte/: __init__.py  __main__.py  cli.py  dna.py  nanopore.py
sim/: __init__.py  __main__.py  base.py  cli.py  config.py  engine.py  get_data.py  labels.py  nanopore.py  registry.py  report.py  rng.py  sanity.py
spec/: 10x_3p_v3.json  10x_3p_v3.pdf.json  nanopore_10x_3p.json  nanopore_10x_3p_v3_1.json  tenx_3p_v3.json  tenx_3p_v3.pdf.json
studio/: .env.example  .gitignore  DEPLOY.md  Dockerfile  HUGGINGFACE.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
tests/: conftest.py  test_catalog_adapters.py  test_diagnose.py  test_diagnostic_catalog.py  test_dna.py  test_doc_extract.py  test_extract_fields.py  test_html_parse.py  test_input_manifest.py  test_io_fastx.py  test_nanopore.py  test_qc.py  test_qc_evidence_importers.py  test_rust_parity.py  test_rust_qc.py  test_sanity_unit.py  test_sim.py  test_sim_constructs.py  test_spec_build.py  test_spec_shape.py  test_wiki_extract.py
(+335 files in other folders)
